--- a/app.css
+++ b/app.css
@@ -57,7 +57,7 @@ body {
   } 
 }
 &-header, &-sms {
-  background-color: #222;
+      background : url("https://www.noaa.gov/sites/default/files/styles/landscape_width_1275/public/legacy/image/2019/Jun/PHOTO-dark%20and%20stormy%20cloudscape-istock-1125x534-Landscape.jpg");
 }
 &-title {
   font-size: 2em;
